// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vue Basic 1`] = `
"<template>
  <div>
    <input :value=\\"name\\" @change=\\"name = $event.target.value\\" />

    Hello! I can run in React, Vue, Solid, or Liquid!
  </div>
</template>
<script>
  export default {
    data: () => ({ name: \\"Steve\\" }),
  };
</script>
"
`;

exports[`Vue Input block 1`] = `
"<template>
  <input
    v-bind=\\"props.attributes\\"
    :key=\\"Builder.isEditing && defaultValue ? defaultValue : 'default-key'\\"
    :placeholder=\\"placeholder\\"
    :type=\\"type\\"
    :name=\\"name\\"
    :value=\\"value\\"
    :defaultValue=\\"defaultValue\\"
    :required=\\"required\\"
  />
</template>
<script>
  import { Builder } from \\"@builder.io/sdk\\";

  export interface FormInputProps {
    type?: string;
    attributes?: any;
    name?: string;
    value?: string;
    placeholder?: string;
    defaultValue?: string;
    required?: boolean;
  }

  export default {
    data: () => ({ Builder }),
  };
</script>
"
`;

exports[`Vue Submit button block 1`] = `
"<template>
  <button v-bind=\\"this.props.attributes\\" type=\\"submit\\">{props.text}</button>
</template>
<script>
  export interface ButtonProps {
    attributes?: any;
    text?: string;
  }

  export default {
    data: () => ({}),
  };
</script>
"
`;
